implemented UL and LI class integration into the CMS.

--- a/templates/partials/navigation/navigation.html
+++ b/templates/partials/navigation/navigation.html
@@ -1,7 +1,7 @@
-<ul id="navigation" class="col two">
+<ul id="navigation" class="header-nav">
   {% for child in page.root %}
     <li>
-      <a href="{{ child.url }}">{{ child.title }}</a>
+      <a class="ajax-link" href="{{ child.url }}">{{ child.title }}</a>
       {% include 'partials/navigation/children.html' with { 'page' : child } %}
     </li>
   {% endfor %}
