Completed Navigation Integration

--- a/templates/default.html
+++ b/templates/default.html
@@ -204,7 +204,7 @@
 
   <div class="footer-margin">
    
-  <div class="copyright" id="footer-left">© Copyright {{ page.current_year }} Alex Neri | {{ page.name }}. All Rights Reserved unless otherwise specified.</div>
+  <div class="copyright" id="footer-left">© Copyright {{ page.current_year }} Alex Neri | {{ page.name }}. All Rights Reserved unless otherwise specified. <a class="atom-rss" href="{{ page.root_path }}/?/feed/">RSS</a> </div>
   
   </div>
 
