--- a/templates/default.html
+++ b/templates/default.html
@@ -177,19 +177,19 @@
 
       <div class="parallax-option" data-jkit="[parallax:strength=0.8;axis=both]">
 
-        <div class="parallax parallax1"><img src="img/business-card-2.png"></div>
+        <div class="parallax parallax1"><img src="{{ page.root_path }}/templates/img/business-card-2.png"></div>
       
       </div>
       
       <div class="parallax-option" data-jkit="[parallax:strength=0.5;axis=both]">
 
-        <div class="parallax parallax1"><img src="img/char_img.png"></div>
+        <div class="parallax parallax1"><img src="{{ page.root_path }}/templates/img/char_img.png"></div>
       
       </div>
 
       <div class="parallax-option" data-jkit="[parallax:strength=0.3;axis=both]">
 
-        <div class="parallax parallax1"><img src="img/business-card.png"></div>
+        <div class="parallax parallax1"><img src="{{ page.root_path }}/templates/img/business-card.png"></div>
       
       </div>
 
