Fixed some img references.

--- a/templates/default.html
+++ b/templates/default.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <title>{{ page.name }}: Technology, Designs, Works.</title>
-  <meta name="description" content="DOTCROSSE - Technology, Designs, and Works. ">
+  <meta name="description" content="{{ page.name }} - Technology, Designs, and Works. ">
   <meta name="keywords" content="clean, elegant, design, simplicity, theme, html5">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="author" content="dc.cyne.jp">
@@ -102,7 +102,7 @@
 
   
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/1.png">
+      <img src="{{ page.root_path }}/templates/img/portfolio/1.png">
         <a class="ajax-link" href="my-designs-mirai-umbrella.html">  
           <div class="grid-hover">
             <h1>Mirai Umbrella</h1>
@@ -112,7 +112,7 @@
     </li>
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/5.png">
+      <img src="{{ page.root_path }}/templates/img/portfolio/5.png">
         <a class="ajax-link" href="my-designs-cucina-espana.html">  
           <div class="grid-hover">
             <h1>Cucina España</h1>
@@ -122,7 +122,7 @@
     </li> 
   
   <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-    <img src="img/portfolio/2.jpg">
+    <img src="{{ page.root_path }}/templates/img/portfolio/2.jpg">
       <a class="ajax-link" href="#">  
         <div class="grid-hover">
           <h1>Single</h1>
@@ -132,7 +132,7 @@
   </li>  
   
   <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-    <img src="img/portfolio/3.jpg">
+    <img src="{{ page.root_path }}/templates/img/portfolio/3.jpg">
       <a class="ajax-link" href="#">  
         <div class="grid-hover">
           <h1>Single</h1>
@@ -142,7 +142,7 @@
   </li>    
 
   <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-    <img src="img/portfolio/4.jpg">
+    <img src="{{ page.root_path }}/templates/img/portfolio/4.jpg">
       <a class="ajax-link" href="#">  
         <div class="grid-hover">
           <h1>Single</h1>
@@ -152,7 +152,7 @@
   </li>    
 
   <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-    <img src="img/portfolio/6.jpg">
+    <img src="{{ page.root_path }}/templates/img/portfolio/6.jpg">
       <a class="ajax-link" href="#">  
         <div class="grid-hover">
           <h1>Single</h1>
