--- a/templates/page.html
+++ b/templates/page.html
@@ -51,7 +51,7 @@
   <!--Header-->
   <header id="fullscreen">
     
-      <div class="logo" id="full"><a class="ajax-link" href="index.php">{{ page.name }}</a></div>
+      <div class="logo" id="full"><a class="ajax-link" href="/">{{ page.name }}</a></div>
       
         <div class="menu-index" id="button">
         <i class="fa fa-bars"></i>
@@ -78,9 +78,9 @@
 
           <div class="two-column">
 
-          {% include 'partials/assets/images.html' %}
-          {{ page.content }}
-          {% include 'partials/assets/pdfs.html' %}
+              {% include 'partials/assets/images.html' %}
+              {{ page.content }}
+              {% include 'partials/assets/pdfs.html' %}
           
           </div>          
 
