Modified to try and clear the issue with the navigation bar.

--- a/templates/default.html
+++ b/templates/default.html
@@ -98,7 +98,7 @@
 
 <!--Portfolio grid-->
 
-<ul class="portfolio-grid" id="portfolio-sidebar">
+<!--<ul class="portfolio-grid" id="portfolio-sidebar">
 
   
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
@@ -161,7 +161,7 @@
       </a>      
   </li>  
 
-</ul>
+</ul> -->
 
 </div>
 
