Fixed the URL update issue when navigating to a child page.
Fix: added a '/' to the @permalink variable in navigation.html, children.html, navigation_boxed.html

The solution couldn't be any easier wtf.

Signed-off-by: Alexander Neri <dotcrosse@cyne.jp>

--- a/templates/partials/navigation/children.html
+++ b/templates/partials/navigation/children.html
@@ -2,7 +2,7 @@ if $children do
   <ul class="children">
   foreach $children do
       <li>
-        <a class="ajax-link" href="@url">@page_name</a>
+        <a class="ajax-link" href="/@permalink">@page_name</a>
         :children
       </li>
     endforeach
