--- a/templates/partials/navigation/navigation.html
+++ b/templates/partials/navigation/navigation.html
@@ -1,6 +1,6 @@
   foreach $root do
     <li>
-      <a class="ajax-link" href="@url">@title</a>
+      <a class="ajax-link" href="/@permalink">@title</a>
       :children
     </li>
   endforeach
