--- a/templates/partials/navigation/navigation_boxed.html
+++ b/templates/partials/navigation/navigation_boxed.html
@@ -1,5 +1,5 @@
 ﻿  foreach $root do
     <li>
-      <a class="ajax-link" href="@url">@title</a>
+      <a href="/@url">@title</a>
     </li>
   endforeach
