Progress with the Project Page template. HURRAH!

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <title>@name: Technology, Designs, Works.</title>
   <meta name="description" content="@name - Technology, Designs, and Works. ">
-  <meta name="keywords" content="clean, elegant, design, simplicity, theme, html5">
+  <meta name="keywords" content="@name, clean, elegant, design, simplicity, theme, html5">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="author" content="dc.cyne.jp">
   <link rel="icon" type="image/png" href="@root_path/templates/img/icon.png" />
