--- a/templates/page.html
+++ b/templates/page.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <title>@title | @name - Technology, Designs, and Works.</title>
   <meta name="description" content="@title | @name - Technology, Designs, and Works. ">
-  <meta name="keywords" content="about, DotCrosse, theme, html5">
+  <meta name="keywords" content="about, @name, theme, html5">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="author" content="dc.cyne.jp">
   <link rel="icon" type="image/png" href="img/icon.png" />
