--- a/templates/partials/next-page.html
+++ b/templates/partials/next-page.html
@@ -1,3 +1,3 @@
-{% for sibling in page.next_sibling %}
-  <p><a href="{{ sibling.url }}">Next project</a>: &rarr; {{ sibling.title }}</p>
-{% endfor %}
+foreach $next_sibling do
+  <p><a class="ajax-link" href="@url">Next project</a>: &rarr; @title</p>
+endforeach
