--- a/templates/partials/previous-page.html
+++ b/templates/partials/previous-page.html
@@ -1,3 +1,3 @@
-{% for sibling in page.previous_sibling %}
-  <p><a href="{{ sibling.url }}">Previous project</a>: &larr; {{ sibling.title }}</p>
-{% endfor %}
+foreach $previous_sibling do
+  <p><a class="ajax-link" href="@url">Previous project</a>: &larr; @title</p>
+endforeach
