Completed Theme Integration with StaceyApp.
Signed-off-by: Alexander Neri <dotcrosse@cyne.jp>

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 <head>
 
   <meta charset="utf-8">
-  <title>@name: Technology, Designs, Works.</title>
-  <meta name="description" content="@name - Technology, Designs, and Works. ">
+  <title>@name: @page_description</title>
+  <meta name="description" content="@name: @page_description">
   <meta name="keywords" content="@name, clean, elegant, design, simplicity, theme, html5">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="author" content="dc.cyne.jp">
@@ -91,12 +91,14 @@
 
         <h1>Technical.<br />Creative.<br />See all</h1>
         <h1 class="typewrite"><span>Portfolio</span></h1>
-        <p>This is my creative and technical portfolio site. Have a look around and see what I have been up to.</p>
+        <p>@content</p>
 
       </div>
 
 
 <!--Portfolio grid-->
+
+:index-projects
 
 <!--<ul class="portfolio-grid" id="portfolio-sidebar">
 
@@ -212,8 +214,8 @@
 <!--Scripts-->
 
   <script src="@root_path/templates/js/jquery.min.js"></script>
-	<script src="@root_path/templates/js/jquery.easing.min.js"></script>
-	<script src="@root_path/templates/js/modernizr.custom.42534.js" type="text/javascript"></script>
+  <script src="@root_path/templates/js/jquery.easing.min.js"></script>
+  <script src="@root_path/templates/js/modernizr.custom.42534.js" type="text/javascript"></script>
   <script src="@root_path/templates/js/jquery.waitforimages.js" type="text/javascript"></script>
   <script src="@root_path/templates/js/typed.js" type="text/javascript"></script>
   <script src="@root_path/templates/js/masonry.pkgd.min.js" type="text/javascript"></script>  
