--- a/templates/category.html
+++ b/templates/category.html
@@ -4,12 +4,12 @@
 <head>
 
   <meta charset="utf-8">
-  <title>@title | @name - Technology, Designs, and Works.</title>
-  <meta name="description" content="@title | @name - Technology, Designs, and Works. ">
+  <title>@title | @name: @page_description</title>
+  <meta name="description" content="@name: @page_description">
   <meta name="keywords" content="about, DotCrosse, theme, html5">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="author" content="dc.cyne.jp">
-  <link rel="icon" type="image/png" href="img/icon.png" />
+  <link rel="icon" type="image/png" href="@root_path/templates/img/icon.png" />
 
 <!--Style-->
 
@@ -87,12 +87,12 @@
         
         <div class="clear"></div>
 
-        <div class="text-intro" id="site-type">
+<!--        <div class="text-intro" id="site-type">
 
           <h1>Works</h1>
           <p>Modern. Clean. Professionally done.</p>
 
-        </div>
+        </div>-->
 </div>
 
   <!--Philosophy separator-->
