--- a/templates/partials/navigation/category-lists.html
+++ b/templates/partials/navigation/category-lists.html
@@ -1,13 +1,15 @@
 foreach $root do
   if $children do
-    <ul class="projects">
+    <ul class="portfolio-grid" id="portfolio-sidebar">
       foreach $children do
-        <li class="col seven">
-          <p class="date col one">@date</p>
-          <h2 class="col five">
-            if @thumb do <img src="@thumb" class="project-thumb" alt=""> endif
-            <a href="@url">@title</a>
-          </h2>
+        <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+          <img src="@thumb">
+          <a class="ajax-link" href="/@permalink">
+            <div class="grid-hover">
+                <h1>@title</h1>
+                <p>@category</p>
+            </div>
+            </a>
         </li>
       endforeach
     </ul>
