Initialised footer.html as a partial.

--- a/templates/page.html
+++ b/templates/page.html
@@ -121,7 +121,7 @@
         <a href="https://www.behance.net/AlexNeri"><i class="fa fa-behance"></i></a>
       
       </div>     
-      <div class="copyright" id="footer-left">© Copyright 2015 Alex Neri | DotCrosse. All Rights Reserved unless otherwise specified.</div>
+      :footer
     
     </div>
 
