--- a/templates/category.html
+++ b/templates/category.html
@@ -119,7 +119,7 @@
         <a href="https://www.behance.net/AlexNeri"><i class="fa fa-behance"></i></a>
       
       </div>     
-      <div class="copyright" id="footer-left">© Copyright 2015 Alex Neri | DotCrosse. All Rights Reserved unless otherwise specified.</div>
+      :footer
     
     </div>
 
