--- a/templates/contact.html
+++ b/templates/contact.html
@@ -124,7 +124,7 @@
         <a href="https://www.behance.net/TomaszMazurczak"><i class="fa fa-behance"></i></a>
       
       </div>     
-      <div class="copyright">© Copyright 2015 Thomsoon.com. All Rights Reserved.</div>
+      :footer
       
 
     
