--- a/templates/index.html
+++ b/templates/index.html
@@ -203,7 +203,7 @@
 
   <div class="footer-margin">
    
-  <div class="copyright" id="footer-left">© Copyright @current_year Alex Neri | @name. All Rights Reserved unless otherwise specified. <a class="atom-rss" href="@root_path/?/feed/">RSS</a> </div>
+  :footer
   
   </div>
 
