--- a/templates/project.html
+++ b/templates/project.html
@@ -127,7 +127,7 @@
         <a href="https://www.behance.net/AlexNeri"><i class="fa fa-behance"></i></a>
       
       </div>     
-      <div class="copyright" id="footer-left">© Copyright @current_year Alex Neri | @name. All Rights Reserved unless otherwise specified. <a class="atom-rss" href="@root_path/?/feed/">RSS</a></div>
+      :footer
     
     </div>
 
