Initialised the following:
header.html
footer.html
scripts.html

for slicing.

Signed-off-by: Alexander Neri <dotcrosse@cyne.jp>

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,28 +1,7 @@
 ﻿<!doctype html>
 
 <html lang="en">
-<head>
-
-  <meta charset="utf-8">
-  <title>@name: @page_description</title>
-  <meta name="description" content="@title | @name: @page_description ">
-  <meta name="keywords" content="@name, simplicity, theme, html5, contact, form">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="author" content="thomsoon.com">
-  <link rel="icon" type="image/png" href="@root_path/templates/img/icon.png" />
-
-<!--Style-->
-
-  <link rel="stylesheet" href="@root_path/templates/css/reset.css">
-  <link rel="stylesheet" href="@root_path/templates/css/style.css">
-  <link rel="stylesheet" href="@root_path/templates/css/style-responsive.css">  
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-  
-</head>
+:header
 
 <body>
 
@@ -136,23 +115,7 @@
 
 <!--Scripts-->
 
-  <script src="@root_path/templates/js/jquery.min.js"></script>
-	<script src="@root_path/templates/js/jquery.easing.min.js"></script>
-	<script src="@root_path/templates/js/modernizr.custom.42534.js" type="text/javascript"></script>
-  <script src="@root_path/templates/js/jquery.waitforimages.js" type="text/javascript"></script>
-  <script src="@root_path/templates/js/typed.js" type="text/javascript"></script>
-  <script src="@root_path/templates/js/masonry.pkgd.min.js" type="text/javascript"></script>  
-  <script src="@root_path/templates/js/imagesloaded.pkgd.min.js" type="text/javascript"></script>    
-  <script src="@root_path/templates/js/jquery.jkit.1.2.16.min.js"></script>
- 
-  <script src="@root_path/templates/js/script.js" type="text/javascript"></script>
-  
-	<script>
-	    $('#button, #buttons').on('click', function () {
-	        $(".opacity-nav").fadeToggle("slow", "linear");
-	        // Animation complete.
-	    });
-  </script>
+:scripts
 
 
 </body>
